Changed the inventory to all canvas, still very early. Changed battlescene logic. Added go server to quickly serve the project for development.

--- a/content/css/francis.css
+++ b/content/css/francis.css
@@ -28,6 +28,13 @@ html, body {
     padding:0;
 }
 
+.interfaceButton{
+    position:absolute;
+    cursor:pointer;
+    border: 1px #140c1c solid;
+    
+}
+
 
 #mainOuter {
     width: 100%;
