Added stamina system to the game. Updated max health so you can't just keep drinking potions. Added REST command during battle to work with the new stamina system.

--- a/content/css/modal.css
+++ b/content/css/modal.css
@@ -27,7 +27,7 @@
 
 #close {
 	position:absolute;
-	background:url(../images/grey_boxCross.png) 0 0 no-repeat;
+	/*background:url(../images/grey_boxCross.png) 0 0 no-repeat;*/
 	width:24px;
 	height:23px;
 	display:block;
