Updated some looks.

--- a/content/css/francis.css
+++ b/content/css/francis.css
@@ -35,6 +35,14 @@ html, body {
     
 }
 
+h5{
+    margin:0;
+    padding: 0;
+}
+
+ul {
+    list-style: circle outside;
+}
 
 #mainOuter {
     width: 100%;
